ajuste de estilo

--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-    <title ng-bind="pageTitle">Ainoxher - Tendencias y satisfacción</title>
+    <title ng-bind="pageTitle">NOVA VET LABS</title>
     <meta name="description" content="{{ post.excerpt }}">
     <meta name="keywords"
           content="Ainoxher - Tendencias y satisfacción, maquinaria industrial de alta calidad">
