--- a/app/index.html
+++ b/app/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-    <title ng-bind="pageTitle">NOVA VET LABS</title>
+    <title ng-bind="pageTitle">Novavet Labs</title>
     <meta name="description" content="{{ post.excerpt }}">
     <meta name="keywords"
-          content="Ainoxher - Tendencias y satisfacción, maquinaria industrial de alta calidad">
+          content="produccion,hormonas,sinteticos,desempeño,fisico,calidad,hormonal">
     <meta name="theme-color" content="#c00">
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'/>
     <!--<base href="/">-->
@@ -36,7 +36,7 @@
           content="{{ post.urlImages.original }}"
           ng-if="post"/>
     <meta property="og:type" content="website"/>
-    <meta property="og:url" content="http://www.ainoxher.com.mx{{ $state.href($state.current.name) }}"/>
+    <meta property="og:url" content="http://novavetlabs.com{{ $state.href($state.current.name) }}"/>
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600" rel="stylesheet"
     <!-- build:css css/style.min.css -->
     <!-- bower:css -->
@@ -69,7 +69,7 @@
             </div>
             <div class="col-md-4 col-sm-4">
                 <a class="navbar-brand" ui-sref="home"><img src="img/logo.png"
-                                                            class="logo" alt="Ainoxher - Tendencias y satisfacción"></a>
+                                                            class="logo" alt="Novavet-labs"></a>
             </div>
             <p class="col-md-4 col-sm-4 text-right">
                 <a href="#"><img width="30" src="img/english.png" alt="English"/></a>
@@ -97,29 +97,8 @@
             <div class="container-fluid">
                 <div class="collapse navbar-collapse" id="header-mainMenu">
                     <ul class="nav navbar-nav nav-main">
-                        <li>
-                            <a ui-sref="home" ng-click="nav.close()">Inicio</a>
-                        </li>
-                        <li>
-                            <a ui-sref="category({slug: 'fabricacion'})" ng-click="nav.close()">Fabricación</a>
-                        </li>
-                        <li>
-                            <a ui-sref="category({slug: 'instalacion'})" ng-click="nav.close()">Instalación</a>
-                        </li>
-                        <li>
-                            <a ui-sref="category({slug: 'automatizacion'})" ng-click="nav.close()">Automatización</a>
-                        </li>
-                        <li>
-                            <a ui-sref="category({slug: 'distribucion'})" ng-click="nav.close()">Distribución</a>
-                        </li>
-                        <li>
-                            <a ui-sref="page({slug: 'nosotros1473883051'})" ng-click="nav.close()">Nosotros</a>
-                        </li>
-                        <li>
-                            <a ui-sref="blog({kind: 'post'})" ng-click="nav.close()">Blog</a>
-                        </li>
-                        <li>
-                            <a ui-sref="contact({kind: 'contact'})" ng-click="nav.close()">Contacto</a>
+                        <li ng-repeat="item in mainNavMenu">
+                            <a href="{{ item.link }}" ng-click="nav.close()">{{ item.name }}</a>
                         </li>
                     </ul>
                 </div>
