--- a/app/index.html
+++ b/app/index.html
@@ -72,9 +72,9 @@
                                                             class="logo" alt="Novavet-labs"></a>
             </div>
             <p class="col-md-4 col-sm-4 text-right">
-                <a href="#"><img width="30" src="img/english.png" alt="English"/></a>
-                <a href="#"><img width="30" src="img/aleman.png" alt="Alemán"/></a>
-                <a href="#"><img width="30" src="img/espanol.png" alt="Español"/></a>
+                <a ng-click="changeLang('ingles')" title="{{ 'Ingles' |translate }}"><img width="30" src="img/english.png" alt="English"/></a>
+                <a ng-click="changeLang('aleman')" title="{{ 'Aleman'|translate }}"><img width="30" src="img/aleman.png" alt="Alemán"/></a>
+                <a ng-click="changeLang('espanol')" title="{{ 'Español'|translate }}"><img width="30" src="img/espanol.png" alt="Español"/></a>
             </p>
         </div>
     </div>
@@ -98,7 +98,7 @@
                 <div class="collapse navbar-collapse" id="header-mainMenu">
                     <ul class="nav navbar-nav nav-main">
                         <li ng-repeat="item in mainNavMenu">
-                            <a href="{{ item.link }}" ng-click="nav.close()">{{ item.name }}</a>
+                            <a href="{{ item.link }}" ng-click="nav.close()">{{ item.name|translate }}</a>
                         </li>
                     </ul>
                 </div>
@@ -141,6 +141,7 @@
 <script src="lib/angular-scroll/angular-scroll.js"></script>
 <script src="lib/angular-truncate/src/truncate.js"></script>
 <script src="lib/angular-touch/angular-touch.js"></script>
+<script src="lib/ngstorage/ngStorage.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 <!-- build:js js/annalise.min.js -->
@@ -152,6 +153,7 @@
 <script src="/js/filters.js"></script>
 <script src="/js/services.js"></script>
 <script src="/js/templates.js"></script>
+<script src="/js/translate.js"></script>
 <!-- endinject -->
 <!-- endbuild -->
 <script>(function (i, s, o, g, r, a, m) {
