--- a/app/index.html
+++ b/app/index.html
@@ -65,7 +65,7 @@
     <div class="nav-top">
         <div class="container">
             <div class="col-md-4 col-sm-4">
-                <p class="pull-left"><i class="fa fa-envelope"></i> <a href="mailto:info@novavetlabs.com">info@novavetlabs.com</a></p>
+                <p class="pull-left mail-top"><i class="fa fa-envelope"></i> <a href="mailto:info@novavetlabs.com">info@novavetlabs.com</a></p>
             </div>
             <div class="col-md-4 col-sm-4">
                 <a class="navbar-brand" ui-sref="home"><img src="img/logo.png"
