Add init config

--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="{{ post.excerpt }}">
     <meta name="keywords"
           content="produccion,hormonas,sinteticos,desempeño,fisico,calidad,hormonal">
-    <meta name="theme-color" content="#c00">
+    <meta name="theme-color" content="{{ initConfig.meta_color }}">
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'/>
     <!--<base href="/">-->
     <!--Favicon-->
