margin to flags

--- a/app/index.html
+++ b/app/index.html
@@ -72,8 +72,8 @@
                                                             class="logo" alt="Novavet-labs"></a>
             </div>
             <p class="col-md-4 col-sm-4 text-right">
-                <a ng-click="changeLang('ingles')" title="{{ 'Ingles' |translate }}"><img width="30" src="img/english.png" alt="English"/></a>
-                <a ng-click="changeLang('aleman')" title="{{ 'Aleman'|translate }}"><img width="30" src="img/aleman.png" alt="Alemán"/></a>
+                <a ng-click="changeLang('ingles')" title="{{ 'Ingles' |translate }}"><img width="30" src="img/english.png" alt="English" class="margin-flags"/></a>
+                <a ng-click="changeLang('aleman')" title="{{ 'Aleman'|translate }}"><img width="30" src="img/aleman.png" alt="Alemán" class="margin-flags"/></a>
                 <a ng-click="changeLang('espanol')" title="{{ 'Español'|translate }}"><img width="30" src="img/espanol.png" alt="Español"/></a>
             </p>
         </div>
