--- a/app/index.html
+++ b/app/index.html
@@ -63,20 +63,9 @@
 <![endif]-->
 <header class="header">
     <div class="nav-top">
-        <div class="container">
-            <div class="col-md-4 col-sm-4">
-                <p class="pull-left mail-top"><i class="fa fa-envelope"></i> <a href="mailto:{{ initConfig.email }}">{{ initConfig.email }}</a></p>
-            </div>
-            <div class="col-md-4 col-sm-4">
-                <a class="navbar-brand" ui-sref="home"><img src="img/logo.png"
-                                                            class="logo" alt="Novavet-labs"></a>
-            </div>
-            <p class="col-md-4 col-sm-4 text-right">
-                <a ng-click="changeLang('ingles')" title="{{ 'Ingles' |translate }}"><img width="30" src="img/english.png" alt="English" class="margin-flags"/></a>
-                <a ng-click="changeLang('aleman')" title="{{ 'Aleman'|translate }}"><img width="30" src="img/aleman.png" alt="Alemán" class="margin-flags"/></a>
-                <a ng-click="changeLang('espanol')" title="{{ 'Español'|translate }}"><img width="30" src="img/espanol.png" alt="Español"/></a>
-            </p>
-        </div>
+
+            <img src="img/logo.png" class="logo" alt="Novavet-labs">
+
     </div>
     <nav class="navbar navbar-default" ng-controller="NavBarCtrl as nav">
         <div class="container container-tab">
@@ -97,8 +86,24 @@
             <div class="container-fluid">
                 <div class="collapse navbar-collapse" id="header-mainMenu">
                     <ul class="nav navbar-nav nav-main">
-                        <li ng-repeat="item in mainNavMenu">
-                            <a href="{{ item.link }}" ng-click="nav.close()">{{ item.name|translate }}</a>
+                        <!--<li ng-repeat="item in mainNavMenu">-->
+                        <li>
+                            <a href="{{ item.link }}">Inicio</a>
+                        </li>
+                        <li>
+                            <a href="{{ item.link }}">Nosotros</a>
+                        </li>
+                        <li>
+                            <a href="{{ item.link }}">Catálago Dama</a>
+                        </li>
+                        <li>
+                            <a href="{{ item.link }}">Catálago Caballero</a>
+                        </li>
+                        <li>
+                            <a href="{{ item.link }}">Catálago Infantil</a>
+                        </li>
+                        <li>
+                            <a ui-sref="contact">Contacto</a>
                         </li>
                     </ul>
                 </div>
@@ -156,7 +161,16 @@
 <script src="/js/translate.js"></script>
 <!-- endinject -->
 <!-- endbuild -->
-<script>(function (i, s, o, g, r, a, m) {i['GoogleAnalyticsObject'] = r;i[r] = i[r] || function () {(i[r].q = i[r].q || []).push(arguments)}, i[r].l = 1 * new Date();a = s.createElement(o), m = s.getElementsByTagName(o)[0];a.async = 1;a.src = g;m.parentNode.insertBefore(a, m)})(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');</script>
+<script>(function (i, s, o, g, r, a, m) {
+    i['GoogleAnalyticsObject'] = r;
+    i[r] = i[r] || function () {
+        (i[r].q = i[r].q || []).push(arguments)
+    }, i[r].l = 1 * new Date();
+    a = s.createElement(o), m = s.getElementsByTagName(o)[0];
+    a.async = 1;
+    a.src = g;
+    m.parentNode.insertBefore(a, m)
+})(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');</script>
 <toasty></toasty>
 </body>
 </html>
