--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-    <title ng-bind="pageTitle">Novavet Labs</title>
+    <title ng-bind="pageTitle">Luissa Shoes</title>
     <meta name="description" content="{{ post.excerpt }}">
     <meta name="keywords"
           content="produccion,hormonas,sinteticos,desempeño,fisico,calidad,hormonal">
@@ -96,23 +96,8 @@
                 <div class="collapse navbar-collapse" id="header-mainMenu">
                     <ul class="nav navbar-nav nav-main">
                         <!--<li ng-repeat="item in mainNavMenu">-->
-                        <li>
-                            <a href="{{ item.link }}">Inicio</a>
-                        </li>
-                        <li>
-                            <a href="{{ item.link }}">Nosotros</a>
-                        </li>
-                        <li>
-                            <a href="{{ item.link }}">Catálago Dama</a>
-                        </li>
-                        <li>
-                            <a href="{{ item.link }}">Catálago Caballero</a>
-                        </li>
-                        <li>
-                            <a href="{{ item.link }}">Catálago Infantil</a>
-                        </li>
-                        <li>
-                            <a ui-sref="contact">Contacto</a>
+                        <li ng-repeat="item in mainNavMenu">
+                            <a href="{{ item.link }}" ng-click="nav.close()">{{ item.name }}</a>
                         </li>
                     </ul>
                 </div>
