improvement in home tabs

--- a/app/index.html
+++ b/app/index.html
@@ -36,7 +36,7 @@
           content="{{ post.urlImages.original }}"
           ng-if="post"/>
     <meta property="og:type" content="website"/>
-    <meta property="og:url" content="http://novavetlabs.com{{ $state.href($state.current.name) }}"/>
+    <meta property="og:url" content="http://www.luissashoes.com{{ $state.href($state.current.name) }}"/>
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600" rel="stylesheet"/>
     <!-- build:css css/style.min.css -->
     <!-- bower:css -->
