--- a/app/index.html
+++ b/app/index.html
@@ -66,13 +66,13 @@
         <div class="container">
             <div class="data-contact pull-left">
                 <a href="tel:013531062495"><i class="fa fa-phone"></i> 01 353 106 2495</a> /
-                <a href="https://www.facebook.com/joseluisgtzf"><i class="fa fa-facebook-square"></i> Facebook</a>
+                <a href="https://www.facebook.com/joseluisgtzf" target="_blank"><i class="fa fa-facebook-square"></i> Facebook</a>
             </div>
-            <a ui-sref="home"><img src="img/logo.png" class="logo" alt="Novavet-labs"></a>
+            <a ui-sref="home"><img src="img/logo.png" class="logo" alt="Luissa Shoes"></a>
 
             <div class="data-contact pull-right">
-                <a href="https://www.google.com.mx/maps/place/San+Daniel+Comboni+284,+Centro+Tres,+Sahuayo+de+Morelos,+Mich./@20.0642639,-102.7300404,17z/data=!3m1!4b1!4m5!3m4!1s0x842ee34e7d91b5b1:0x5d3896efd8723777!8m2!3d20.0642589!4d-102.7278464"><i
-                        class="fa fa-map-marker"></i> San Daniel comboni #284, 59000 Sahuayo.</a>
+                <a target="_blank" href="https://www.google.com.mx/maps/place/San+Daniel+Comboni+284,+Centro+Tres,+Sahuayo+de+Morelos,+Mich./@20.0642639,-102.7300404,17z/data=!3m1!4b1!4m5!3m4!1s0x842ee34e7d91b5b1:0x5d3896efd8723777!8m2!3d20.0642589!4d-102.7278464"><i
+                        class="fa fa-map-marker"></i> San Daniel Comboni #284, 59000 Sahuayo.</a>
             </div>
         </div>
     </div>
