ajuste de estilo

--- a/app/index.html
+++ b/app/index.html
@@ -86,9 +86,9 @@
                     <ul class="nav navbar-nav navbar-right">
                         <!--<li ng-repeat="item in mainNavMenu">-->
                         <li>
-                            <a href="#"><i class="ion-social-facebook-outline" data-pack="social"></i></a>
+                            <a href="#"><i class="ion-social-facebook" data-pack="social"></i></a>
                         </li>
-                        <li><a href="#"><i class="ion-social-twitter-outline" data-pack="social"></i></a></li>
+                        <li><a href="#"><i class="ion-social-twitter" data-pack="social"></i></a></li>
                     </ul>
                     <ul class="nav navbar-nav nav-main navbar-right">
                         <!--<li ng-repeat="item in mainNavMenu">-->
