ajuste de estlo

--- a/app/index.html
+++ b/app/index.html
@@ -83,7 +83,7 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
 
                 <div class="collapse navbar-collapse" id="header-mainMenu">
-                    <ul class="nav navbar-nav navbar-right">
+                    <ul class="nav navbar-nav navbar-right mobile">
                         <!--<li ng-repeat="item in mainNavMenu">-->
                         <li>
                             <a href="#"><i class="ion-social-facebook" data-pack="social"></i></a>
