text slider dynamic

--- a/app/index.html
+++ b/app/index.html
@@ -86,9 +86,8 @@
                     <ul class="nav navbar-nav navbar-right mobile">
                         <!--<li ng-repeat="item in mainNavMenu">-->
                         <li>
-                            <a href="https://www.facebook.com/prados6386/?fref=ts"><i class="ion-social-facebook" data-pack="social"></i></a>
+                            <a href="https://www.facebook.com/prados6386" target="_blank"><i class="ion-social-facebook" data-pack="social"></i></a>
                         </li>
-                        <li><a href="#"><i class="ion-social-twitter" data-pack="social"></i></a></li>
                     </ul>
                     <ul class="nav navbar-nav nav-main navbar-right">
                         <!--<li ng-repeat="item in mainNavMenu">-->
