--- a/app/index.html
+++ b/app/index.html
@@ -115,6 +115,7 @@
 <footer id="footer_area">
     <ng-include src="'/templates/partials/footer.html'"></ng-include>
 </footer>
+<script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCEjGVa5h-ccW9wOy401EBhJXaEUogH0ZY"></script>
 <!-- build:js js/vendor.min.js -->
 <!-- bower:js -->
 <script src="lib/jquery/dist/jquery.js"></script>
@@ -136,6 +137,14 @@
 <script src="lib/angular-truncate/src/truncate.js"></script>
 <script src="lib/angular-touch/angular-touch.js"></script>
 <script src="lib/ngstorage/ngStorage.js"></script>
+<script src="lib/angular-simple-logger/dist/angular-simple-logger.js"></script>
+<script src="lib/lodash/lodash.js"></script>
+<script src="lib/markerclustererplus/src/markerclusterer.js"></script>
+<script src="lib/google-maps-utility-library-v3-markerwithlabel/dist/markerwithlabel.js"></script>
+<script src="lib/google-maps-utility-library-v3-infobox/dist/infobox.js"></script>
+<script src="lib/google-maps-utility-library-v3-keydragzoom/dist/keydragzoom.js"></script>
+<script src="lib/js-rich-marker/src/richmarker.js"></script>
+<script src="lib/angular-google-maps/dist/angular-google-maps.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 <!-- build:js js/annalise.min.js -->
