--- a/app/index.html
+++ b/app/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-    <title ng-bind="pageTitle">Servicio Prados Verdes</title>
+    <title ng-bind="pageTitle">iHelp</title>
     <meta name="description" content="{{ post.excerpt }}">
     <meta name="keywords"
-          content="produccion,hormonas,sinteticos,desempeño,fisico,calidad,hormonal">
+          content="Mantente a salvo en manos de quienes te aman, configura alertas de Ayuda, fallas mecánicas, batería
+baja en el móvil y más. ">
     <meta name="theme-color" content="{{ initConfig.meta_color }}">
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'/>
     <!--<base href="/">-->
@@ -85,8 +86,8 @@
                 <div class="collapse navbar-collapse" id="header-mainMenu">
                     <ul class="nav navbar-nav navbar-right mobile">
                         <!--<li ng-repeat="item in mainNavMenu">-->
-                        <li>
-                            <a href="https://www.facebook.com/prados6386" target="_blank"><i class="ion-social-facebook" data-pack="social"></i></a>
+                        <li ng-repeat="item in NavMenuSocial">
+                            <a href="{{ item.link }}" target="_blank"><i class="{{ item.name }}" data-pack="social"></i></a>
                         </li>
                     </ul>
                     <ul class="nav navbar-nav nav-main navbar-right">
