menu fixed js, estilo gral y redes sociales y contacto ya dinamicos

--- a/app/index.html
+++ b/app/index.html
@@ -77,7 +77,8 @@ baja en el móvil y más. ">
                     <span class="icon-bar"></span>
                 </button>
                 <div class="navbar-brand">
-                    <a ui-sref="home"><img src="img/logo.png" class="logo" alt="Luissa Shoes"></a>
+                    <a ui-sref="home"><img src="img/logo.png" class="logo" alt="iHelp"></a>
+                    <a ui-sref="home"><img src="img/logo-white.png" class="logo-white" alt="iHelp"></a>
 
                 </div>
             </div>
