Change url index

--- a/app/index.html
+++ b/app/index.html
@@ -37,9 +37,9 @@ baja en el móvil y más. ">
           content="{{ post.urlImages.original }}"
           ng-if="post"/>
     <meta property="og:type" content="website"/>
-    <meta property="og:url" content="http://www.luissashoes.com{{ $state.href($state.current.name) }}"/>
+    <meta property="og:url" content="http://www.ihelp.com.mx{{ $state.href($state.current.name) }}"/>
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600" rel="stylesheet"/>
-    <link href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet"/>
+    <link href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet"/>
 
     <!-- build:css css/style.min.css -->
     <!-- bower:css -->
