--- a/app/index.html
+++ b/app/index.html
@@ -117,7 +117,7 @@ baja en el móvil y más. ">
 <footer id="footer_area">
     <ng-include src="'/templates/partials/footer.html'"></ng-include>
 </footer>
-<script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCEjGVa5h-ccW9wOy401EBhJXaEUogH0ZY"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCEjGVa5h-ccW9wOy401EBhJXaEUogH0ZY"></script>
 <!-- build:js js/vendor.min.js -->
 <!-- bower:js -->
 <script src="lib/jquery/dist/jquery.js"></script>
