--- a/app/index.html
+++ b/app/index.html
@@ -38,7 +38,7 @@
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="http://www.corrientealterna.com.mx{{ $state.href($state.current.name) }}"/>
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500" rel="stylesheet"/>
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:100,300,400,700" rel="stylesheet">
     <link href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet"/>
 
     <!-- build:css css/style.min.css -->
@@ -69,13 +69,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-4 col-md-4 text-left">
-                    <span><i class="icon ion-ios-telephone-outline"></i><a href=""> 333 222 22 22</a></span>
+                    <a href=""><i class="icon ion-ios-telephone-outline"></i> 333 222 22 22</a>
                 </div>
                 <div class="col-sm-4 col-md-4">
-                    <span><i class="icon ion-ios-email-outline"></i><a href=""> {{initConfig.email}}</a></span>
+                  <a href=""> <i class="icon ion-ios-email-outline"></i> {{initConfig.email}}</a>
                 </div>
-                <div class="col-sm-4 col-md-4 text-right">
-                    <span><i class="icon ion-ios-cart-outline"></i><a href=""> Carrito</a></span>
+                <div class="col-sm-4 col-md-4 text-right shopping-cart">
+                   <a href=""><i class="icon ion-ios-cart-outline"></i> Carrito</a>
                 </div>
             </div>
         </div>
