--- a/app/index.html
+++ b/app/index.html
@@ -72,10 +72,10 @@
                     <a href=""><i class="icon ion-ios-telephone-outline"></i> 333 222 22 22</a>
                 </div>
                 <div class="col-sm-4 col-md-4">
-                  <a href=""> <i class="icon ion-ios-email-outline"></i> {{initConfig.email}}</a>
+                    <a href=""> <i class="icon ion-ios-email-outline"></i> {{initConfig.email}}</a>
                 </div>
                 <div class="col-sm-4 col-md-4 text-right shopping-cart">
-                   <a href=""><i class="icon ion-ios-cart-outline"></i> Carrito</a>
+                    <a ui-sref="shopcart"><i class="icon ion-ios-cart-outline"></i> Carrito</a>
                 </div>
             </div>
         </div>
@@ -92,8 +92,8 @@
                     <span class="icon-bar"></span>
                 </button>
                 <div class="navbar-brand">
-                    <a ui-sref="home"><img src="img/logo-ca.png" class="logo" alt="Corriente Alterna"></a>
-                    <a ui-sref="home"><img src="img/logo-ca.png" class="logo-white" alt="Corriente Alterna"></a>
+                    <a ui-sref="home"><img src="img/corriente-alterna-logo.png" class="logo" alt="Corriente Alterna"></a>
+                    <a ui-sref="home"><img src="img/corriente-alterna-logo.png" class="logo-white" alt="Corriente Alterna"></a>
 
                 </div>
             </div>
@@ -110,7 +110,19 @@
                     <!--<li ng-repeat="item in mainNavMenu">-->
                     <li ng-repeat="item in mainNavMenu">
                         <a href="{{ item.link }}" ng-click="nav.close()">{{ item.name }}</a>
+
                     </li>
+                    <!--<li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">Another action</a></li>
+                            <li><a href="#">Another action</a></li>
+                            <li><a href="#">Another action</a></li>
+                            <li><a href="#">Another action</a></li>
+                            <li><a href="#">Another action</a></li>
+                            <li><a href="#">Another action</a></li>
+                        </ul>
+                    </li>-->
                 </ul>
             </div>
 
@@ -179,8 +191,8 @@
 <script>(function (i, s, o, g, r, a, m) {
     i['GoogleAnalyticsObject'] = r;
     i[r] = i[r] || function () {
-                (i[r].q = i[r].q || []).push(arguments)
-            }, i[r].l = 1 * new Date();
+            (i[r].q = i[r].q || []).push(arguments)
+        }, i[r].l = 1 * new Date();
     a = s.createElement(o), m = s.getElementsByTagName(o)[0];
     a.async = 1;
     a.src = g;
@@ -192,7 +204,7 @@
         var z = $zopim = function (c) {
             z._.push(c)
         }, $ = z.s =
-                d.createElement(s), e = d.getElementsByTagName(s)[0];
+            d.createElement(s), e = d.getElementsByTagName(s)[0];
         z.set = function (o) {
             z.set._.push(o)
         };
