--- a/app/index.html
+++ b/app/index.html
@@ -75,7 +75,7 @@
             </div>
             <div class="col-sm-4 col-md-4 text-right shopping-cart">
                 <span class="qty-cart">12</span>
-                <a href=""><i class="icon ion-ios-cart-outline"></i> Carrito</a>
+                <a ui-sref="shopcart"><i class="icon ion-ios-cart-outline"></i> Carrito</a>
             </div>
         </div>
     </div>
