--- a/app/index.html
+++ b/app/index.html
@@ -71,7 +71,7 @@
                 <a href=""><i class="icon ion-ios-telephone-outline"></i> 333 222 22 22</a>
             </div>
             <div class="col-sm-4 col-md-4">
-                <a href=""> <i class="icon ion-ios-email-outline"></i> {{initConfig.email}}</a>
+                <a href="mailto:{{initConfig.email}}"><i class="icon ion-ios-email-outline"></i> {{initConfig.email}}</a>
             </div>
             <div class="col-sm-4 col-md-4 text-right shopping-cart">
                 <span class="qty-cart">12</span>
