--- a/app/index.html
+++ b/app/index.html
@@ -68,12 +68,12 @@
     <div class="navbar-info">
         <div class="container">
             <div class="col-sm-4 col-md-4 text-left">
-                <a href=""><i class="icon ion-ios-telephone-outline"></i> 333 222 22 22</a>
+                <a href="tel:{{initConfig.phone}}"><i class="icon ion-ios-telephone-outline"></i> {{initConfig.phone}}</a>
             </div>
             <div class="col-sm-4 col-md-4">
                 <a href="mailto:{{initConfig.email}}"><i class="icon ion-ios-email-outline"></i> {{initConfig.email}}</a>
             </div>
-            <div class="col-sm-4 col-md-4 text-right shopping-cart">
+            <div class="col-sm-4 col-md-4 text-right shopping-cart" ng-if="ecommerce">
                 <span class="qty-cart">12</span>
                 <a ui-sref="shopcart"><i class="icon ion-ios-cart-outline"></i> Carrito</a>
             </div>
@@ -104,6 +104,7 @@
                         <a href="{{ item.link }}" ng-click="nav.close()">{{ item.name }}</a>
 
                     </li>
+                    <!--
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">P <b class="caret"></b></a>
                         <ul class="dropdown-menu container">
@@ -113,6 +114,7 @@
                             <li class="col-md-3"><a href="#">Something else here</a></li>
                         </ul>
                     </li>
+                    -->
                 </ul>
             </div>
 
