--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,7 @@
           content="">
     <meta name="theme-color" content="{{ initConfig.meta_color }}">
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'/>
-    <!--<base href="/">-->
+    <base href="/">
     <!--Favicon-->
     <link href="img/ico/favicon.ico" rel="shortcut icon" type="favicon">
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="img/ico/apple-touch-icon-144-precomposed.png">
