--- a/app/index.html
+++ b/app/index.html
@@ -36,7 +36,7 @@
           content="{{ post.urlImages.original }}"
           ng-if="post"/>
     <meta property="og:type" content="website"/>
-    <meta property="og:url" content="http://www.corrientealterna.com.mx{{ $state.href($state.current.name) }}"/>
+    <meta property="og:url" content="http://www.corriente-alterna.com{{ $state.href($state.current.name) }}"/>
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:100,300,400,700" rel="stylesheet">
     <link href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet"/>
