add notification srv

--- a/app/index.html
+++ b/app/index.html
@@ -50,6 +50,7 @@
     <link rel="stylesheet" href="lib/lightbox2/dist/css/lightbox.css" />
     <link rel="stylesheet" href="lib/angular-block-ui/dist/angular-block-ui.css" />
     <link rel="stylesheet" href="lib/angular-toasty/dist/angular-toasty.css" />
+    <link rel="stylesheet" href="lib/sweetalert/dist/sweetalert.css" />
     <!-- endbower -->
     <!-- inject:css -->
     <link rel="stylesheet" href="/css/main.css">
@@ -155,6 +156,8 @@
 <script src="lib/google-maps-utility-library-v3-keydragzoom/dist/keydragzoom.js"></script>
 <script src="lib/js-rich-marker/src/richmarker.js"></script>
 <script src="lib/angular-google-maps/dist/angular-google-maps.js"></script>
+<script src="lib/sweetalert/dist/sweetalert.min.js"></script>
+<script src="lib/ngSweetAlert/SweetAlert.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 <!-- build:js js/annalise.min.js -->
