--- a/app/index.html
+++ b/app/index.html
@@ -158,6 +158,7 @@
 <script src="lib/angular-google-maps/dist/angular-google-maps.js"></script>
 <script src="lib/sweetalert/dist/sweetalert.min.js"></script>
 <script src="lib/ngSweetAlert/SweetAlert.js"></script>
+<script src="lib/satellizer/dist/satellizer.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 <!-- build:js js/annalise.min.js -->
