--- a/app/index.html
+++ b/app/index.html
@@ -171,6 +171,10 @@
 <script src="/js/services.js"></script>
 <script src="/js/templates.js"></script>
 <script src="/js/translate.js"></script>
+<script src="/js/auth/auth.app.js"></script>
+<script src="/js/auth/controllers.js"></script>
+<script src="/js/auth/directives.js"></script>
+<script src="/js/auth/services.js"></script>
 <!-- endinject -->
 <!-- endbuild -->
 <script>(function (i, s, o, g, r, a, m) {
