--- a/app/index.html
+++ b/app/index.html
@@ -159,6 +159,7 @@
 <script src="lib/sweetalert/dist/sweetalert.min.js"></script>
 <script src="lib/ngSweetAlert/SweetAlert.js"></script>
 <script src="lib/satellizer/dist/satellizer.js"></script>
+<script src="lib/angular-messages/angular-messages.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 <!-- build:js js/annalise.min.js -->
