--- a/app/index.html
+++ b/app/index.html
@@ -68,15 +68,28 @@
 <header class="header">
     <div class="navbar-info">
         <div class="container">
-            <div class="col-sm-4 col-md-4 text-left">
+            <div class="col-sm-4 col-md-3 text-left">
                 <a href="tel:{{initConfig.phone}}"><i class="icon ion-ios-telephone-outline"></i> {{initConfig.phone}}</a>
             </div>
-            <div class="col-sm-4 col-md-4">
+            <div class="col-sm-4 col-md-3">
                 <a href="mailto:{{initConfig.email}}"><i class="icon ion-ios-email-outline"></i> {{initConfig.email}}</a>
             </div>
-            <div class="col-sm-4 col-md-4 text-right shopping-cart" ng-if="ecommerce">
-                <span class="qty-cart">{{ items.length }}</span>
-                <a ui-sref="shopcart"><i class="icon ion-ios-cart-outline"></i> Carrito</a>
+            <div class="col-md-6" ng-controller="AccessCtrl as Access">
+                <div class="col-sm-4 col-md-6 text-right shopping-cart" ng-if="ecommerce">
+                    <span class="qty-cart">{{ items.length }}</span>
+                    <a ui-sref="shopcart"><i class="icon ion-ios-cart-outline"></i> Carrito</a>
+                </div>
+                <div class="col-xs-3 col-sm-6 col-md-6 data-contact perfil text-right">
+                    <!--<div class="col-xs-1 col-sm-3"></div>-->
+                    <div class="col-xs-4">
+                        <i class="ion-ios-person-outline person"></i>
+                    </div>
+                    <div class="col-xs-8 text-left no-padding">
+                        <a ui-sref="register" class="my-account" ng-if="!Access.isAuthenticated()">Iniciar sesión</a>
+                        <a ng-click="Access.logout()" class="my-logout" ng-if="Access.isAuthenticated()" href="#">{{user.username}}
+                        <i class="ion-log-out logout-ac"></i></a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
