--- a/app/index.html
+++ b/app/index.html
@@ -82,12 +82,14 @@
                 <div class="col-xs-3 col-sm-6 col-md-6 data-contact perfil text-right">
                     <!--<div class="col-xs-1 col-sm-3"></div>-->
                     <div class="col-xs-4">
-                        <i class="ion-ios-person-outline person"></i>
+                        <i ng-if="Access.isAuthenticated()" data-toggle="tooltip" ui-sref="dashboard" title="Ver mi cuenta" class="ion-ios-person-outline person"></i>
+                        <i ng-if="!Access.isAuthenticated()" data-toggle="tooltip" ui-sref="register" title="Ver mi cuenta" class="ion-ios-person-outline person"></i>
                     </div>
                     <div class="col-xs-8 text-left no-padding">
                         <a ui-sref="register" class="my-account" ng-if="!Access.isAuthenticated()">Iniciar sesión</a>
-                        <a ng-click="Access.logout()" class="my-logout" ng-if="Access.isAuthenticated()" href="#">{{user.username}}
-                        <i class="ion-log-out logout-ac"></i></a>
+                        <a ng-click="Access.logout()"
+                           class="my-logout" ng-if="Access.isAuthenticated()" href="#">{{user.username}}
+                        <i data-toggle="tooltip" title="Cerrar sesión" class="ion-log-out logout-ac"></i></a>
                     </div>
                 </div>
             </div>
@@ -189,6 +191,9 @@
 <script src="/js/auth/controllers.js"></script>
 <script src="/js/auth/directives.js"></script>
 <script src="/js/auth/services.js"></script>
+<script src="/js/shop/controllers.js"></script>
+<script src="/js/shop/services.js"></script>
+<script src="/js/shop/shop.app.js"></script>
 <!-- endinject -->
 <!-- endbuild -->
 <script>(function (i, s, o, g, r, a, m) {
