--- a/app/index.html
+++ b/app/index.html
@@ -51,6 +51,7 @@
     <link rel="stylesheet" href="lib/angular-block-ui/dist/angular-block-ui.css" />
     <link rel="stylesheet" href="lib/angular-toasty/dist/angular-toasty.css" />
     <link rel="stylesheet" href="lib/sweetalert/dist/sweetalert.css" />
+    <link rel="stylesheet" href="lib/angular-ui-select/dist/select.css" />
     <!-- endbower -->
     <!-- inject:css -->
     <link rel="stylesheet" href="/css/main.css">
@@ -87,9 +88,9 @@
                     </div>
                     <div class="col-xs-7 text-left no-padding">
                         <a ui-sref="register" class="my-account" ng-if="!Access.isAuthenticated()">Iniciar sesión</a>
-                        <a ng-click="Access.logout()"
+                        <a
                            class="my-logout" ng-if="Access.isAuthenticated()" href="#">{{user.username}}
-                        <i data-toggle="tooltip" title="Cerrar sesión" class="ion-log-out logout-ac"></i></a>
+                        <i ng-click="Access.logout()" data-toggle="tooltip" title="Cerrar sesión" class="ion-log-out logout-ac"></i></a>
                     </div>
                 </div>
             </div>
@@ -175,6 +176,7 @@
 <script src="lib/ngSweetAlert/SweetAlert.js"></script>
 <script src="lib/satellizer/dist/satellizer.js"></script>
 <script src="lib/angular-messages/angular-messages.js"></script>
+<script src="lib/angular-ui-select/dist/select.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 <!-- build:js js/annalise.min.js -->
