delete address addng-table

--- a/app/index.html
+++ b/app/index.html
@@ -52,6 +52,7 @@
     <link rel="stylesheet" href="lib/angular-toasty/dist/angular-toasty.css" />
     <link rel="stylesheet" href="lib/sweetalert/dist/sweetalert.css" />
     <link rel="stylesheet" href="lib/angular-ui-select/dist/select.css" />
+    <link rel="stylesheet" href="lib/ng-table/dist/ng-table.css" />
     <!-- endbower -->
     <!-- inject:css -->
     <link rel="stylesheet" href="/css/main.css">
@@ -177,6 +178,7 @@
 <script src="lib/satellizer/dist/satellizer.js"></script>
 <script src="lib/angular-messages/angular-messages.js"></script>
 <script src="lib/angular-ui-select/dist/select.js"></script>
+<script src="lib/ng-table/dist/ng-table.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 <!-- build:js js/annalise.min.js -->
