--- a/app/index.html
+++ b/app/index.html
@@ -44,7 +44,6 @@
     <!-- build:css css/style.min.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="lib/animate.css/animate.css" />
-    <link rel="stylesheet" href="lib/font-awesome/css/font-awesome.css" />
     <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="lib/owl.carousel/dist/assets/owl.carousel.css" />
     <link rel="stylesheet" href="lib/lightbox2/dist/css/lightbox.css" />
@@ -53,6 +52,7 @@
     <link rel="stylesheet" href="lib/sweetalert/dist/sweetalert.css" />
     <link rel="stylesheet" href="lib/angular-ui-select/dist/select.css" />
     <link rel="stylesheet" href="lib/ng-table/dist/ng-table.css" />
+    <link rel="stylesheet" href="lib/font-awesome/css/font-awesome.css" />
     <!-- endbower -->
     <!-- inject:css -->
     <link rel="stylesheet" href="/css/main.css">
@@ -70,30 +70,28 @@
 <header class="header">
     <div class="navbar-info">
         <div class="container">
-            <div class="col-sm-4 col-md-3 text-left">
+            <div class="col-sm-4 nav-info text-left">
                 <a href="tel:{{initConfig.phone}}"><i class="icon ion-ios-telephone-outline"></i> {{initConfig.phone}}</a>
             </div>
-            <div class="col-sm-4 col-md-3">
+            <div class="col-sm-3 nav-info">
                 <a href="mailto:{{initConfig.email}}"><i class="icon ion-ios-email-outline"></i> {{initConfig.email}}</a>
             </div>
-            <div class="col-sm-4 col-md-6" ng-controller="AccessCtrl as Access">
-                <div class="col-xs-9 col-sm-12 col-md-6 text-right shopping-cart" ng-if="ecommerce">
+            <div class="col-sm-5 text-right" ng-controller="AccessCtrl as Access">
+                <a ui-sref="register" class="my-account" ng-if="!Access.isAuthenticated()">
+                    <i class="ion-ios-person-outline fa-2x"></i>
+                    Iniciar sesión
+                </a>
+                
+                <a class="my-account" ng-if="Access.isAuthenticated()">
+                    <i class="ion-ios-person-outline fa-2x"></i>
+                    {{user.username}}
+                    <i ng-click="Access.logout()" data-toggle="tooltip" title="Cerrar sesión" class="fa fa-sign-out logout-ac"></i>
+                </a>
+                
+                <a ui-sref="shopcart" class="text-right shopping-cart" ng-if="ecommerce" ng-controller="AccessCtrl as Access">
                     <span class="qty-cart">{{ items.length }}</span>
-                    <a ui-sref="shopcart"><i class="icon ion-ios-cart-outline"></i> Carrito</a>
-                </div>
-                <div class="col-xs-12 col-sm-6 col-md-6 data-contact perfil text-right hidden-sm">
-                    <!--<div class="col-xs-1 col-sm-3"></div>-->
-                    <div class="col-xs-5">
-                        <i ng-if="Access.isAuthenticated()" data-toggle="tooltip" ui-sref="dashboard" title="Ver mi cuenta" class="ion-ios-person-outline person"></i>
-                        <i ng-if="!Access.isAuthenticated()" data-toggle="tooltip" ui-sref="register" title="Ver mi cuenta" class="ion-ios-person-outline person"></i>
-                    </div>
-                    <div class="col-xs-7 text-left no-padding">
-                        <a ui-sref="register" class="my-account" ng-if="!Access.isAuthenticated()">Iniciar sesión</a>
-                        <a
-                           class="my-logout" ng-if="Access.isAuthenticated()" href="#">{{user.username}}
-                        <i ng-click="Access.logout()" data-toggle="tooltip" title="Cerrar sesión" class="ion-log-out logout-ac"></i></a>
-                    </div>
-                </div>
+                    <i class="icon ion-ios-cart-outline"></i> Carrito
+                </a>
             </div>
         </div>
     </div>
