--- a/app/index.html
+++ b/app/index.html
@@ -77,7 +77,7 @@
                     <a ui-sref="register" class="my-account" ng-if="!Access.isAuthenticated()">
                         <i class="ion-ios-person-outline fa-2x"></i> Iniciar sesión
                     </a>
-                    <a class="my-account" ng-if="Access.isAuthenticated()">
+                    <a class="my-account" ng-if="Access.isAuthenticated()" href="">
                         <i class="ion-ios-person-outline fa-2x" ui-sref="dashboard" title="Mi cuenta"></i> {{user.username}}
                         <i ng-click="Access.logout()" data-toggle="tooltip" title="Cerrar sesión" class="fa fa-sign-out logout-ac"></i>
                     </a>
