--- a/app/index.html
+++ b/app/index.html
@@ -111,7 +111,7 @@
                             </a>
                         </li>
                         <li  class="dropdown">
-                            <a  ng-if="Access.isAuthenticated()" class="dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                            <a ng-if="Access.isAuthenticated()" class="dropdown-toggle btn-blue" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
                                 <i class="ion-ios-person"></i> {{user.username}} 
                                 <span class="caret"></span>
                             </a>
