--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <title ng-bind="pageTitle">Corriente Alterna</title>
+    <title ng-bind="pageTitle">Moon's Aquariums</title>
     <meta name="description" content="{{ post.excerpt }}">
     <meta name="keywords" content="">
     <meta name="theme-color" content="{{ initConfig.meta_color }}">
@@ -70,7 +70,7 @@
                     <a href="tel:015555589899"><i class="icon ion-ios-telephone-outline"></i> 01 (55) 55 58 98 99</a>
                 </div>
                 <div class="col-sm-3 nav-info ca-phone">
-                    <a href="mailto:info@moons.mx}"><i class="icon ion-email"></i> info@moons.mx</a>                
+                    <a href="mailto:info@moons.mx}"><i class="icon ion-email"></i> info@moons.mx</a>
                 </div>
                 <div class="col-sm-6 ca-auth">
                     <ul class="list-social-media">
@@ -87,7 +87,7 @@
         <div class="middle-space">
             <div class="container">
                 <div class="col-sm-3 text-left">
-                    <a ui-sref="home"><img src="img/logo.jpg" class="logo" alt="Corriente Alterna"></a>
+                    <a ui-sref="home"><img src="img/logo.jpg" class="logo" alt="Moons Aquariums"></a>
                 </div>
                 <div class="col-sm-5">
                     <form name="search" class="search-prd">
@@ -198,9 +198,9 @@
     <script src="lib/sweetalert/dist/sweetalert.min.js"></script>
     <script src="lib/ngSweetAlert/SweetAlert.js"></script>
     <script src="lib/satellizer/dist/satellizer.js"></script>
-    <script src="lib/angular-messages/angular-messages.js"></script>
     <script src="lib/angular-ui-select/dist/select.js"></script>
     <script src="lib/ng-table/dist/ng-table.js"></script>
+    <script src="lib/angular-messages/angular-messages.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:js js/annalise.min.js -->
