remove google maps from index

--- a/app/index.html
+++ b/app/index.html
@@ -32,7 +32,7 @@
     <meta property="og:description" content="{{ post.excerpt }}" ng-if="post" />
     <meta property="og:image" content="{{ post.urlImages.original }}" ng-if="post" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="http://www.corriente-alterna.com{{ $state.href($state.current.name) }}" />
+    <meta property="og:url" content="http://moons.desarrollapps.com{{ $state.href($state.current.name) }}" />
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
     <link href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet" />
 
@@ -197,7 +197,6 @@
     <footer id="footer_area">
         <ng-include src="'/templates/partials/footer.html'"></ng-include>
     </footer>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCEjGVa5h-ccW9wOy401EBhJXaEUogH0ZY"></script>
     <!-- build:js js/vendor.min.js -->
     <!-- bower:js -->
     <script src="lib/jquery/dist/jquery.js"></script>
