ajuste de estilo en home

--- a/app/index.html
+++ b/app/index.html
@@ -110,7 +110,7 @@
                         <li>
                             <a ui-sref="shopcart" class="text-right shopping-cart" ng-if="ecommerce" ng-controller="AccessCtrl as Access">
                                 <span class="qty-cart">{{ items.length }}</span>
-                                <i class="icon ion-ios-cart-outline"></i><span class="hidden-xs"></span>
+                                <i class="icon ion-ios-cart"></i><span class="hidden-xs"></span>
                             </a>
                         </li>
                         <li>  
