added facebook-messenger and watshap

--- a/app/index.html
+++ b/app/index.html
@@ -80,6 +80,8 @@
                 <div class="col-sm-4 ca-auth">
                     <ul class="list-social-media">
                         <li><a href=""><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="https://m.me/Moons-Aquariums" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                        <li class="visible-xs"><a href="intent://send/+5213318959338#Intent;scheme=smsto;package=com.whatsapp;action=android.intent.action.SENDTO;end" target="_blank"><i class="ion-social-whatsapp"></i></a></li>
                         <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                         <li><a href=""><i class="fa fa-instagram"></i></a></li>
                         <li><a href=""><i class="fa fa-youtube"></i></a></li>
